--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SplashScreenMainActivity_">
+        <activity android:name=".activities.SplashScreenActivity_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
